# parametric_lattice

./: .gitignore  AGENTS.md  LICENSE  README.md  apdl_preview_bcc.ipynb  environment.yml  excel_background.py  notebook_apdl_preview.py  pyproject.toml  simulation.py  simulation.xlsm
artifacts/lattice_json/: bc.json  bcc.json  bch.json  bcz.json  dia.json  diamond.json  fc.json  fcc.json  fcz.json  kelvin.json  octahedron.json  octet-truss.json  rhombus.json  sc.json
artifacts/metadata/: bc.json  bcc.json  dia.json  fcc.json
cells/: bc.lgf  bcc.lgf  bcz.lgf  dia.lgf  diamond.lgf  fc.lgf  fcc.lgf  fcz.lgf  kelvin.lgf  octahedron.lgf  octet-truss.lgf  rhombus.lgf  sc.lgf
lgf/: bc.lgf  bcc.lgf  bcz.lgf  custom.txt  dia.lgf  diamond.lgf  fc.lgf  fcc.lgf  fcz.lgf  kelvin.lgf  octahedron.lgf  octet-truss.lgf  rhombus.lgf  sc.lgf
src/: apdl_preview.py  pipeline.py
src/core/: apdl_block.py  apdl_commands.py  apdl_settings.py  hashing.py  lattice.py  sim_result.py  unit_cell.py
src/custom_io/: apdl_io.py  boundary_touch_area.py  case_hash.py  excel_io.py  excel_read.py  excel_write.py  excel_write_long.py  geometry_io.py  json_io.py  lattice_io.py  lgf_io.py  mapdl_worker.py  mesh_io.py  path_config.py  path_safety.py  pipeline.py  post_cache_sync.py  socket_io.py  ui_heartbeat.py
tests/: conftest.py  test_component_pipeline.py  test_component_solver_pipeline.py  test_custom_io_pipeline.py  test_element_type_pipeline.py  test_excel_io.py  test_material_pipeline.py  test_meshing_pipeline.py  test_params_builders.py  test_profile_pipeline.py  test_setup_pipeline.py
(+146 files in other folders)
