[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parametric-lattice"
version = "0.1.0"
description = "Parametric lattice simulation helpers for MAPDL-based workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.4",
    "jaxtyping>=0.2.0",
]
authors = [
    { name = "Parametric Lattice Contributors" },
]

[project.scripts]
parametric-lattice = "core.core:main"

[project.optional-dependencies]
excel = [
    "xlwings>=0.30",
]
viz = [
    "plotly>=5.0",
]
ansys = [
    "ansys-mapdl-core>=0.71",
]
dev = [
    "pytest>=8.0",
]
all = [
    "xlwings>=0.30",
    "plotly>=6.7.0",
    "ansys-mapdl-core>=0.71",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
